fix: Revert the scrollbar changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,17 +14,3 @@
     @apply text-lg;
   }
 }
-
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0);
-}
-
-::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-}
